made 060 a little better